--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <link rel = "stylesheet" href = "/page1/public/css/index.css">
+    <link rel = "stylesheet" href = "/index.css">
 
     <title>Introducao</title>
 
