--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       Dito isso: boa sorte! Olhos sempre abertos<br>
       <p id="dica">Dica: anotem as respostas :)</p>
 
-      <button onclick="window.location.href = '/page1/views/page1.html'">Clique aqui</button>
+      <button onclick="window.location.href = '/page1.html'">Clique aqui</button>
 
     </div>
     
