--- a/page6.html
+++ b/page6.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 
-    <link rel = "stylesheet" href = "/page1/public/css/page2.css">
+    <link rel = "stylesheet" href = "/page.css">
 
     <title>6</title>
 
