--- a/page1.html
+++ b/page1.html
@@ -27,7 +27,7 @@
       function myFunction(){
         let x = document.getElementById("answer").value;
         let text;
-        if(x != "sutartsa"){
+        if(x != "sutarta"){
           text = "Senha incorreta";
       
         }
