--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <div>
 
       <p>Oi! Mestre falando aqui<br><br>
-      Saindo um pouco do RP para explicar como vai funcionar essa etapa<br><br>
+      Saindo um pouco do RP para explicar como vai funcionar essa etapa.<br><br>
+      Vocês ajudarão Samuel a hackear o conteúdo protegido dentro do pen-drive.<br>
+      Para isso, vocês passarão por uma série de <strong> Enigmas. </strong><br>
       Ao clicar no botão a baixo, vocês serão redirecionados a uma página,<br> 
-      depois pra outra e assim por diante até descobrirem a localização<br>
-      As respostas têm que ser enviadas no minúsculo, sem espaço<br> e sem caracteres especiais 
-      (com exceção de números)<br><br>
-      Vocês têm direito a 3 dicas da Mestra. <br><br> Podem usar o google a vontade<br><br>
-      PROIBIDO INSPECIONAR A PÁGINA<br><br>
+      depois pra outra e assim por diante até invadirem por completo o conteúdo protegido<br>
+      As respostas têm que ser enviadas no minúsculo, sem espaço<br>
+      e sem caracteres especiais<br><br>
+      Vocês têm direito a 3 dicas da Mestra.<br><br> 
+      Podem usar o google a vontade<br><br>
+      <strong>PROIBIDO INSPECIONAR A PÁGINA</strong><br><br>
       Dito isso: boa sorte! Olhos sempre abertos<br>
       <p id="dica">Dica: anotem as respostas :)</p>
 
