--- a/page7.html
+++ b/page7.html
@@ -11,7 +11,7 @@
   <body>
 
     <div>
-      <img src="/page1/public/assets/peixe.jpg">
+      <img src="/peixe.jpg">
 
       <p>iisiiiisiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiioiiiiiiododdodddodddodddddddddddoiiioiiiiiiiiiiiodddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddo</p>
 
